fix: adjust sizing to prevent overflow on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ button:hover {
   background-size: auto 100000%;
   font-size: max(1em, 2vw);
   color: white;
-  height: clamp(500px, 80vh, 700px);
+  height: 70vh;
   min-width: 300px;
   aspect-ratio: 3/5;
   position: relative;
@@ -153,14 +153,15 @@ button:hover {
 
 /* Controls styling */
 #controls {
+  height: 25vh;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 
 .control {
-  height: clamp(3em, 5vw, 10em);
-  width: clamp(3em, 5vw, 10em);
-  font-size: clamp(1.5em, 2.5vw, 5em);
+  height: clamp(2em, 5vh, 3em);
+  width: clamp(2em, 5vh, 3em);
+  font-size: clamp(1.5em, 2.5vh, 2em);
 }
 
 .control,
